# antioch

./: .gitignore  Makefile.am  configure.ac
doxygen/: antioch.dox.in
example/: Makefile.am  example_program.C
m4/: config_summary.m4
share/: Makefile.am
src/: Makefile.am
src/core/include/antioch/: chemical_mixture.h  kinetics_conditions.h
src/diffusion/include/antioch/: constant_lewis_diffusivity.h  molecular_binary_diffusion.h  molecular_binary_diffusion_utils.h
src/kinetics/include/antioch/: arrhenius_rate.h  data_equilibrium.h  equilibrium_evaluator.h  kinetics_evaluator.h  kooij_rate.h  reaction.h  reaction_set.h  vanthoff_rate.h
src/parsing/include/antioch/: ascii_parser.h  chemkin_parser.h  nasa_mixture_ascii_parsing.h  parse_base.h  parse_hdf5.h  parsing_enum.h  read_reaction_set_data.h  read_species_set.h  species_ascii_parsing.h  transport_species_ascii_parsing.h  xml_parser.h
src/thermal_conduction/include/antioch/: eucken_thermal_conductivity.h  kinetics_theory_thermal_conductivity.h
src/thermal_conductivity/include/antioch/: pure_species_thermal_conductivity.h  pure_species_thermal_conductivity_utils.h  rotational_relaxation.h
test/: Makefile.am  kinetics_equilibrium.C  kinetics_equilibrium_TP.C  kinetics_equilibrium_TP_air_5sp.sh.in  kinetics_equilibrium_air_5sp.sh.in  kinetics_regression.C  molecular_binary_diffusion_unit.C  nasa_evaluator_unit.C  parsing_chemkin.C  pure_species_thermal_conductivity_unit.C  pure_species_thermal_conductivity_vec_unit.C
test/input_files/: test_parsing.chemkin
(+9 files in other folders)
