EXTRA_DIST =

AM_CPPFLAGS =

AM_LDFLAGS =

#=======================================================================
# example
#=======================================================================
example_FILE = $(top_builddir)/example/example_program.C

EXTRA_DIST += $(example_FILE)

MAINTAINERCLEANFILES = Makefile.in

MOSTLYCLEANFILES = *.gcno
